--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "audicrypt"
-version = "0.0.0"
-description = "A Tauri App"
+version = "0.1"
+description = "Application for encryption and steganography with audio files"
 authors = ["you"]
 license = ""
 repository = ""
@@ -17,6 +17,7 @@ tauri-build = { version = "1.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all"] }
+tauri-plugin-window-state = "0.1"
 
 [features]
 # by default Tauri runs in production mode
